--- a/reports/2018-04-03-to-2018-06-21.md
+++ b/reports/2018-04-03-to-2018-06-21.md
@@ -3,13 +3,17 @@
 Start date:  2018-04-03
 End date:  2018-06-21
 
+## Short Summary
+
+(write short general summary here if applicable)
+
 ## CLAM
 
 *Official task and deliverable references:*  CLARIAH T21 [D2.8 (software); D2.9 (doc)]
 
 ### clam v2.3.3
 
-> * Introducing ``INTERNALURLPREFIX`` configuration parameter as an attempted fix for issue #68 
+> * Introducing ``INTERNALURLPREFIX`` configuration parameter as an attempted fix for issue #68
 
 
 *(Released by Maarten van Gompel on 2018-05-10)*
@@ -101,9 +105,9 @@ https://github.com/LanguageMachines/foliautils/releases/tag/v0.9.1
 
 ### foliautils v0.9
 
-> 
+>
 > [Ko vd Sloot]
-> 
+>
 > * FoLiA-stats.cxx:
 >   - added a --collect option, to create files with all n-grams
 >     together
@@ -115,9 +119,9 @@ https://github.com/LanguageMachines/foliautils/releases/tag/v0.9.1
 >   - now fails when every input file fails
 > * avoid xml:id's starting with a number. Add "id-" in front.
 > * added more tests
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > * added codemeta.json
 
 
@@ -126,14 +130,14 @@ https://github.com/LanguageMachines/foliautils/releases/tag/v0.9
 
 ### libfolia v1.13
 
-> 
+>
 > [Ko van der Sloot]
-> 
+>
 > * disabled WordReference test. It was incomplete, and hard to do
 > * use icu:: namespace
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > * added codemeta.json
 > * fix spelling errors in error messages
 
@@ -165,18 +169,18 @@ https://github.com/proycon/pynlpl/releases/tag/v1.2.6
 
 ### frog v0.15
 
-> 
+>
 > [Ko vd Sloot]
-> 
+>
 > * ucto_tokenizer_mod: removed call of (useless) ucto:setSentenceDetection(true)
 > * fix to close the server when a socket fails
 > * when frogging a file, and the docID is NOT specified, use the filename as
 >   the docID (filtering out non-NCName characters)
 > * fix building the documentation from TeX files
 > * a lot of small code improvements
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > * added codemeta.json
 > * Fixed python-frog example in documentation (closes #48)
 
@@ -200,7 +204,7 @@ https://github.com/LanguageMachines/frogdata/releases/tag/v0.16
 ### LaMachine v2.2.7
 
 > * ``lamachine-update`` fix for Docker #94
-> * improved git ident fix when stashing #88 
+> * improved git ident fix when stashing #88
 > * added note on disabling Hyper-V on Windows #93
 > * Better managed version number
 > Due to a bug in ``lamachine-update`` that affects docker users only, docker users should update to this release by obtaining the new image from Docker Hub.
@@ -215,9 +219,9 @@ https://github.com/proycon/LaMachine/releases/tag/v2.2.7
 > * nginx: allow upload of large files (up to 1GB)
 > * Apache and puppet examples (thanks to @lbiemans)
 > * Explicitly force english UTF-8 locale in lamachine-start-webserver script
-> * Set default HTTP port to 8080 instead of 80 if root is disabled 
+> * Set default HTTP port to 8080 instead of 80 if root is disabled
 > * Redirect uwsgi output to log + more info in lamachine-start-webserver
-> * Attempted fix for git ident problem on stash #88 #94 
+> * Attempted fix for git ident problem on stash #88 #94
 > * Rehash $PATH in bootstrap script
 
 
@@ -226,8 +230,8 @@ https://github.com/proycon/LaMachine/releases/tag/v2.2.6
 
 ### LaMachine v2.2.3
 
-> * Updated flavour descriptions to cause less confusion 
-> * Set Labirinto portal_registry_url to be relative by default 
+> * Updated flavour descriptions to cause less confusion
+> * Set Labirinto portal_registry_url to be relative by default
 > * Added U_USING_ICU_NAMESPACE for old ticcltools to make it work with newer icu
 > * added --force parameter to bootstrap (#88), and you can now do ``lamachine-update force=2`` to explicitly remove all sources prior to updating
 > * Attempted fix for git stash problems due to missing identity by setting git environment variables; introduced new "maintainer_name" and "maintainer_mail" properties. #88
@@ -243,9 +247,9 @@ https://github.com/proycon/LaMachine/releases/tag/v2.2.3
 
 > * **Added Labirinto portal** (https://github.com/proycon/labirinto), adds a web-based portal of available software to LaMachine (provided you included webserver support)
 > * Added ``nodejs-core``
-> * Integrated FLAT #49 
-> * Stick to django 2.0 if user is on python 3.4 (2.1 does not support 3.4) 
-> * Fixed nginx webservertype issue #86 
+> * Integrated FLAT #49
+> * Stick to django 2.0 if user is on python 3.4 (2.1 does not support 3.4)
+> * Fixed nginx webservertype issue #86
 > * Various metadata fixes and enhancements
 > * Added option for including extra metadata of tools not in LaMachine
 > * Split nextflow into separate role rather than as part of PICCL
@@ -280,7 +284,7 @@ https://github.com/proycon/LaMachine/releases/tag/v2.1.7
 > * Fix for extra activation scripts
 > * Fix for alpino (#61)
 > * Extra checks for conflicts with anaconda
-> * Do not download spacy data if it already exists 
+> * Do not download spacy data if it already exists
 > * Add (locally compiled) nginx in local env variant
 > * Various other fixes
 
@@ -302,7 +306,7 @@ https://github.com/proycon/LaMachine/releases/tag/v2.1.3
 > * Initial add of software by CLTL, VU Amsterdam (#70)
 > * Introduced ``unix_group`` and ``web_group`` configuration options for explicit group ownership
 > * Added instructions about security to the README
-> * Expand icu 61 workaround to all platforms #69 
+> * Expand icu 61 workaround to all platforms #69
 > * uwsgi fixes for CentOS 7
 > * Fixes for Linux Mint (hopefully, to be confirmed)
 
@@ -329,8 +333,8 @@ https://github.com/proycon/codemetapy/releases/tag/v0.1.3
 ### codemetapy v0.1.2
 
 > * making registry jsonld complaint
-> * added schema:audience property 
-> * Work on entrypoints, defining extra context for entrypoints (codemeta/codemeta#183) 
+> * added schema:audience property
+> * Work on entrypoints, defining extra context for entrypoints (codemeta/codemeta#183)
 > * lowercase all identifiers
 
 
@@ -423,9 +427,9 @@ https://github.com/proycon/labirinto/releases/tag/v0.1.0
 
 ### ticcutils v0.19
 
-> 
+>
 > [Ko van der Sloot]
-> 
+>
 > * Bumped library version to 5.0
 > * SocketBasics:
 >   - invalidate sockets, when something looks not OK
@@ -441,9 +445,9 @@ https://github.com/proycon/labirinto/releases/tag/v0.1.0
 >   - implemented gnu-like extensions in command-line parsing.
 >     (intermixing mass options with normal options)
 > * added tests for the new features/functions.
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > * added codemeta.json file
 
 
@@ -485,7 +489,7 @@ https://github.com/LanguageMachines/PICCL/releases/tag/v0.6.1
 >   * Some fixes for running ticcl.nf for folia files with different extension #32 (but not extensively tested yet)
 >   * frog.nf couldn't find frog xml output #29
 >   * Use new inputclass/outputclass parameters for FoLiA-correct #34
->   * ocr.nf could not find FoLiA-hocr output files #30 
+>   * ocr.nf could not find FoLiA-hocr output files #30
 > This release depends upon the new releases (released today) of **ticcltools** (v0.6) and **foliautils** (v0.9.2).
 
 
@@ -575,15 +579,15 @@ https://github.com/LanguageMachines/ticcltools/releases/tag/v0.6
 
 ### mbt v3.3.2
 
-> 
+>
 > [Ko van der Sloot]
-> 
+>
 > Maintenance release:
 > - updated configure/build/test
 > - typos in man pages corrected
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > - Added codemeta.json
 
 
@@ -611,16 +615,16 @@ https://github.com/proycon/python-timbl/releases/tag/v2018.04.23
 
 ### timbl v6.4.12
 
-> 
+>
 > [Ko van der Sloot]
-> 
+>
 > Bugfix release:
 > - updated usage(). Info on -G 2 option was wrong.
 > - changed an error message to be more clear.
 > - fixed building of the TeX documentation
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > - Added codemeta.json metadata
 
 
@@ -673,9 +677,9 @@ https://github.com/LanguageMachines/ucto/releases/tag/v0.13.1
 
 ### ucto v0.13
 
-> 
+>
 > [Ko van der Sloot]
-> 
+>
 > * improved configure/build/test
 > * added a --split option
 > * fixed -P option
@@ -685,9 +689,9 @@ https://github.com/LanguageMachines/ucto/releases/tag/v0.13.1
 > * added more tests
 > * fixed uninitialized variable.
 > * added code to use an alternative search-path for uctodata
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > * added codemeta.json
 
 
@@ -705,16 +709,16 @@ https://github.com/LanguageMachines/uctodata/releases/tag/v0.7.1
 
 ### uctodata v0.7
 
-> 
+>
 > [Ko vd Sloot]
-> 
+>
 >  - tokconfig-nld-historical: typo in rule
 >  - updated all languages with new ABBREVIATION and NUMBER-ORDINAL rules:
 >    = accommodate ABBREVIATIONS within brackets.
 >    = avoid needless backtracking in NUMBER-ORDINAL
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 >  - Apparent bug in Italian config
 
 
