added short summary

--- a/reports/2018-04-03-to-2018-06-21.md
+++ b/reports/2018-04-03-to-2018-06-21.md
@@ -5,7 +5,16 @@ End date:  2018-06-21
 
 ## Short Summary
 
-(write short general summary here if applicable)
+*[Maarten van Gompel]*
+
+A lot has happened this period and new releases have been published for most of our software, also due to the fact that
+there is now [codemeta](https://codemeta.github.io/) metadata supplied with most software. The main focus for me was the
+continuation of the LaMachine v2 plan, in the scope of the CLARIAH WP3 VRE project. Software metadata was an important
+component in this. A portal front end (named Labirinto) that uses this metadata to display available software, has been
+implemented and deployed both in LaMachine and also for CLST in general (launched at
+https://webservices-lst.science.ru.nl). A lot of time was also spent on getting PICCL into production ready shape and
+there has been lot of coordination with IvdNT regarding deployment of LaMachine and PICCL, fixing various bugs and
+issues on the way.
 
 ## CLAM
 
