--- a/reports/2018-04-03-to-2018-06-21.md
+++ b/reports/2018-04-03-to-2018-06-21.md
@@ -16,7 +16,7 @@ https://webservices-lst.science.ru.nl). A lot of time was also spent on getting 
 there has been lot of coordination with IvdNT regarding deployment of LaMachine and PICCL, fixing various bugs and
 issues on the way.
 
-## RDM and Data Curation
+### RDM and Data Curation
 
 *[Henk van den Heuvel]*
 
@@ -25,7 +25,7 @@ issues on the way.
 > * Fixes on our OAI-PMH bridge so that cmdi files can be harvested
 > * Parts of WLD and WBD prepared for Hercules project (collaboration with INT)
 > * Initiation of curation of WGD (dialect dictionary of Gelderland) for a webportal/search interface
-> * Proposal submitted for tasks covering underspending on CLARIAH at RU 
+> * Proposal submitted for tasks covering underspending on CLARIAH at RU
 
 ## CLAM
 
