--- a/reports/2018-06-22-to-2018-10-22.md
+++ b/reports/2018-06-22-to-2018-10-22.md
@@ -12,7 +12,7 @@ In no particular order:
 * This period various improvements have been made to LaMachine.
     * added Oersetter for Fryske Akademy
     * adding Frisian-Dutch ASR (still in progress)
-* Started work on the next major version (FoLiA v2), which features a completely revised and more formal
+* Started work on the next major FoLiA version (FoLiA v2), which features a completely revised and more formal
   documentation, as well as support for provenance data (https://github.com/proycon/folia/issues/46), which should be of
   benefit to the VRE. This can be considered a head-start for CLARIAH-PLUS.
 * The Frog Named Entity Recogniser is being extended gazetteers with more fine-grained categories (https://github.com/LanguageMachines/frog/issues/59)
