added short summary

--- a/reports/2018-10-23-to-2019-03-18.md
+++ b/reports/2018-10-23-to-2019-03-18.md
@@ -5,7 +5,31 @@ End date:  2019-03-18
 
 ## Short Summary
 
-(TODO: add manually)
+Maarten van Gompel and Iris Hendrickx submitted an extended abstract on LaMachine for the CLARIN conference, which Iris presented in
+Pisa in poster-form. We also worked on a full paper which was recently accepted for the proceedings of that conference.
+
+After months of development, FoLiA v2.0 has been released (for details see the release notes later in this report).
+
+Ongoing unreleased work by Ko van der Sloot:
+
+* libfolia
+  - een processor class geïmplementeerd om FoLiA streaming te verwerken
+
+* ucto:
+  - gebruikt nu de streaming class van libfolia
+  - verschillende issues met folia verwerking gerepareerd
+  - grote schoonmaak gehouden in de code
+
+* frog:
+ - herimplementatie met een simpelere interne datastructuur
+ - voor FoliA verwerking gebruik makend van de libfolia processor class
+   daardoor kleinere memory footprint.
+ - kleine bug fixes
+
+* ticcltools:
+  - nieuwe features gegevoegd tbv TICCL/PICCL/TICCLAT etc
+
+(TODO: Henk?)
 
 ## CLAM
 
@@ -13,7 +37,7 @@ End date:  2019-03-18
 
 ### clam v2.4.4
 
-> Bugfix release: fix for forwarders in web interface #69 
+> Bugfix release: fix for forwarders in web interface #69
 
 
 *(Released by Maarten van Gompel on 2019-02-11)*
@@ -22,7 +46,7 @@ https://github.com/proycon/clam/releases/tag/v2.4.4
 ### clam v2.4.3
 
 > * Allow CLAMClient to use HTTP Basic Auth instead of Digest
-> * check whether the proper authorization scheme is used 
+> * check whether the proper authorization scheme is used
 
 
 *(Released by Maarten van Gompel on 2018-12-12)*
@@ -30,8 +54,8 @@ https://github.com/proycon/clam/releases/tag/v2.4.3
 
 ### clam v2.4.2
 
-> * Bugfix: Boolean paramters (checkboxes) with default True did not get posted #73 
-> * Allow HTTP digest authentication to be disabled (e.g. for allowing only HTTP basic authentication) 
+> * Bugfix: Boolean paramters (checkboxes) with default True did not get posted #73
+> * Allow HTTP digest authentication to be disabled (e.g. for allowing only HTTP basic authentication)
 
 
 *(Released by Maarten van Gompel on 2018-12-11)*
@@ -40,7 +64,7 @@ https://github.com/proycon/clam/releases/tag/v2.4.2
 ### clam v2.4.1
 
 > Minor bugfix release:
-> * Fix in CLAMFile.read() 
+> * Fix in CLAMFile.read()
 
 
 *(Released by Maarten van Gompel on 2018-11-21)*
@@ -51,7 +75,7 @@ https://github.com/proycon/clam/releases/tag/v2.4.1
 > * Ported documentation to sphinx and rewrote/restructured various sections (#72), the old documentation is now obsolete.
 > * added system details to the CLAM footer (so it's not just a CLAM footer)
 > * Added Forwarders (#69) and ForwardViewer
-> * Implemented  CLAMData.get() (akin to dict.get())  #50 
+> * Implemented  CLAMData.get() (akin to dict.get())  #50
 > * parameter default fix (#71)
 
 
@@ -92,27 +116,27 @@ https://github.com/proycon/clam/releases/tag/v2.3.5
 > Points of general interest:
 > * Completely revised the FoLiA documentation, turned into more formal specification; automatically drawn from the official specification; with automatically validated examples. Now available as a webpage hosted on https://folia.readthedocs.io (PDF still available too) #43
 >   * The documentation includes some guidelines on good FoLiA practises (arose from #70 and others)
-> * Added proper support for provenance logging in FoLiA #46 
-> * Renamed alignment annotation to relation annotation #59 
-> * Ensured most examples are "sensible" #9 
+> * Added proper support for provenance logging in FoLiA #46
+> * Renamed alignment annotation to relation annotation #59
+> * Ensured most examples are "sensible" #9
 >   * Extended tests using these examples, all examples are automatically tested now
-> * The FoLiA tools are now split from the central FoLiA repository into a separate project at https://github.com/proycon/foliatools #55 
+> * The FoLiA tools are now split from the central FoLiA repository into a separate project at https://github.com/proycon/foliatools #55
 >   * Cleaner output without stack traces from FoLiA validator #44
-> * Implemented the ability to add inline annotations on multi-word spans (group annotations) and solved related multi-word issues. These were previously reserved only for use with structural elements. #51 
-> * Revised the structure annotation hierarchy (i.e. which structural elements are allowed under which parents) on certain points #42 
-> * Implemented a hidden words annotation type, allowed a layer of implicit/empty/ghost words that can be referenced from span annotation. Needed e.g. for syntactic movement annotation. #58 
+> * Implemented the ability to add inline annotations on multi-word spans (group annotations) and solved related multi-word issues. These were previously reserved only for use with structural elements. #51
+> * Revised the structure annotation hierarchy (i.e. which structural elements are allowed under which parents) on certain points #42
+> * Implemented a hidden words annotation type, allowed a layer of implicit/empty/ghost words that can be referenced from span annotation. Needed e.g. for syntactic movement annotation. #58
 > * Allow encoding of soft word breaks / hyphenation #66
 > More technical points:
-> * Add support for provenance in FQL #60 
-> * Annotation declaration overhaul and handle missing set attribute in declarations #54 
-> * Explicitly forbid and prevent forward wrefs from span annotation #41 
-> * Apply space attribute more generically to multiple structure elements #61 
+> * Add support for provenance in FQL #60
+> * Annotation declaration overhaul and handle missing set attribute in declarations #54
+> * Explicitly forbid and prevent forward wrefs from span annotation #41
+> * Apply space attribute more generically to multiple structure elements #61
 > * Added a new property in the specification to detect tags that may be (or MUST be) used as Wrefs #63
 > * Added a new property to distinguish folia:id (IDREF) from xml:id (ID) #64
-> * Alias attribute does not propagate to RelaxNG schema yet #65 
+> * Alias attribute does not propagate to RelaxNG schema yet #65
 > A new FoLiA library has been released (replacing the previous one in PyNLPl): https://github.com/proycon/foliapy/releases/tag/2.0.0
 > A new version of FoLiA tools has also been released:  https://github.com/proycon/foliatools/releases/tag/2.0.0
-> You may also consult the FoLiA release plan (#68) for more information on upgrading and compatibility. 
+> You may also consult the FoLiA release plan (#68) for more information on upgrading and compatibility.
 
 
 *(Released by Maarten van Gompel on 2019-03-13)*
@@ -157,9 +181,9 @@ https://github.com/proycon/foliatools/releases/tag/v2.0.0
 
 ### foliautils v0.10
 
-> 
+>
 > [Ko vd Sloot]
-> 
+>
 >   * fixed icu:namespace issues
 >   * added FoLiA-abby, an ABBY to FoLiA convertor
 >   * src/FoLiA-abby.cxx, src/FoLiA-page.cxx, src/FoLiA-pm.cxx:
@@ -258,11 +282,11 @@ https://github.com/proycon/LaMachine/releases/tag/v2.4.11
 
 ### LaMachine v2.4.10
 
-> * implemented initial support for LXC/LXD containers #134 
+> * implemented initial support for LXC/LXD containers #134
 > * fix for macOS installation of uwsgi
 > * added Go
-> * added a -h/--help flag to lamachine-update 
-> * added --only option for lamachine-update to more selectively update 
+> * added a -h/--help flag to lamachine-update
+> * added --only option for lamachine-update to more selectively update
 
 
 *(Released by Maarten van Gompel on 2019-02-06)*
@@ -271,7 +295,7 @@ https://github.com/proycon/LaMachine/releases/tag/v2.4.10
 ### LaMachine v2.4.9
 
 > * Added GLEM webservice
-> * listen on all IPs for Jupyter Lab (fixes #129) 
+> * listen on all IPs for Jupyter Lab (fixes #129)
 > * fixes for continuous integration on travis
 > * fixed for installation on Ubuntu 18.04
 
@@ -374,7 +398,7 @@ https://github.com/LanguageMachines/PICCL/releases/tag/v0.7.3.1
 
 ### PICCL v0.7.3
 
-> At least for some PDFs, the PDF to image file convertor in PICCL, i.e. PDFimage, created spurious image files. These sometimes resulted in 'pages' of garbage. Also, when we started building this pipeline, PDFimages did not yet convert straight into tiff-format. So we also used 'convert'. 
+> At least for some PDFs, the PDF to image file convertor in PICCL, i.e. PDFimage, created spurious image files. These sometimes resulted in 'pages' of garbage. Also, when we started building this pipeline, PDFimages did not yet convert straight into tiff-format. So we also used 'convert'.
 > Both have now been replaced by pdftoppm, which seems to produce exactly the same amount of output tiff-files as regular PDF viewers report.
 
 
@@ -383,8 +407,8 @@ https://github.com/LanguageMachines/PICCL/releases/tag/v0.7.3
 
 ### PICCL v0.7.2
 
-> * fixed --help flag for ocr and ticcl (was broken) 
-> * fix for text input when skipping TICCL 
+> * fixed --help flag for ocr and ticcl (was broken)
+> * fix for text input when skipping TICCL
 > * Use 300dpi instead of the default 72dpi when converting bitmaps to TIF, should reduce garbage output #45
 > * Minor logging improvements: output tesseract version to standard output (#45) + feedback on why frog is enabled
 
@@ -412,11 +436,11 @@ https://github.com/LanguageMachines/PICCL/releases/tag/v0.7.1
 > * Fixes in the wrapper script
 >    * Fixes for text input
 >    * Fix: Output did not show up for download when only OCR is enabled #40
-> * Updated the startserver* scripts for the piccl webservice, made them more LaMachine-aware 
-> * Prevent accidentally feeding Nextflow's trace.txt log as input 
+> * Updated the startserver* scripts for the piccl webservice, made them more LaMachine-aware
+> * Prevent accidentally feeding Nextflow's trace.txt log as input
 > * Report input files to stdout for some pipelines (ticcl,frog, tokenize)
 > * Fix in nederlab pipeline, allow untokenised folia input and add --tok option to force tokenisation
-> * README fix. #41 
+> * README fix. #41
 > See also https://github.com/proycon/clam/issues/69
 
 
@@ -469,21 +493,21 @@ https://github.com/LanguageMachines/ucto/releases/tag/v0.14.1
 
 ### ucto v0.14
 
-> 
+>
 > [Ko van der Sloot]
-> 
+>
 > * updated usage() and removed -S option (never used)
 > * make sure the right textclass is assigned to \<w\> nodes in FoLiA
 > * minor code fixes/refactorings
 > * added more tests
 > * updated man.1 page
-> 
+>
 > [Maarten van Gompel]
-> 
+>
 > * updated README.md
-> 
+>
 > [Iris Hendrickx]
-> 
+>
 > * Updated and extended the manual
 
 
@@ -492,14 +516,14 @@ https://github.com/LanguageMachines/ucto/releases/tag/v0.14
 
 ### uctodata v0.8
 
-> 
+>
 > [Ko van der Sloot]
-> 
+>
 >   - separated .abr files from there main files for all Languages
 >   - updated italian data (thanks to @texttheater)
-> 
+>
 > [Iris Hendricks]
-> 
+>
 >   - updated abbrev files for Portuguese Turkish and French based on
 >     https://en.wiktionary.org/wiki/Category:Portuguese_abbreviations and
 >     https://en.wiktionary.org/wiki/Category:Turkish_initialisms.
