wrote short summary

--- a/reports/2019-10-14-to-2020-01-14.md
+++ b/reports/2019-10-14-to-2020-01-14.md
@@ -5,7 +5,36 @@ End date:  2020-01-14
 
 ## Short Summary
 
-(TODO: add manually)
+The past period, a major new CLAM version was released (v3.0), featuring a new and improved user interface and user
+experience in general. It contains numerous improvements and has been integrated in LaMachine and deployed in Nijmegen.
+
+FLAT has once more been adopted as the annotation tool of choice for another round of the PARSEME project.
+
+LaMachine has again had a few more interations of added software, improvements, and fixes. It now
+more explicitly targets certain Linux distribution/operating systems and indicates the level of support
+(gold/silver/bronze), to temper user expectation and keep things more maintainable in the long run.
+
+Maarten has specified various potential workflows for the WP3 VRE project, as the VRE developers were struggling with
+the existing list that was very underspecified and incomplete. The list explores technical possibilities and gives suggestions,
+what is still lacking but is very important, is an actual user base! (I'm a bit worried about that actually)
+
+The need arose for a webservice to do conversions, as an alternative to OpenConvert with which there were issues (from
+the VRE developers) and which has gotten out of date. Maarten wrote a new CLAM-based webservice called Piereling,
+leveraging existing solutions such as pandoc, the service is mostly focussed on conversions from and to FoLiA.
+The (limited!) TEI-to-folia converter developed as part of Nederlab is also integrated.
+
+Maarten attended (virtually) the CLARIN switchboard workshop and is working on further integratations of Nijmegen-hosted
+CLAM-based services. He's in contact with the switchboard developers for closer collaboration.
+
+Maarten spoke with Gertjan Filarski about CLARIAH-as-a-service and will help set up the workflow interest group with
+Jauco, and also participate in the Text Infrastructure group (and perhaps Annotation Infrastructure).
+
+Fryske Akademy now runs their own LaMachine instance for deployment of Oersetter and no longer relies on Nijmegen's
+hosting.
+
+The PyOpenSci community expressed an interest in the codemeta standard (3rd party) for software metadata and the codemetapy tool
+Maarten wrote for it (as also used by LaMachine).
+
 
 ## CLAM
 
@@ -24,7 +53,7 @@ https://github.com/proycon/clam/releases/tag/v3.0.9
 
 > Minor fix/update release:
 > * output proper http headers in custom format in textstats example #87
-> * minor fix of misleading debug message #85 
+> * minor fix of misleading debug message #85
 > * make all the new extra metadata available in client/data API
 
 
@@ -172,7 +201,7 @@ https://github.com/proycon/flat/releases/tag/v0.9.1
 ### foliapy v2.2.5
 
 > Minor fix:
-> * no hard fail on missing version, but assume an old version instead #17 
+> * no hard fail on missing version, but assume an old version instead #17
 
 
 *(Released by Maarten van Gompel on 2020-01-13)*
@@ -335,7 +364,7 @@ https://github.com/proycon/labirinto/releases/tag/v0.2.5
 > **v2.13**:
 > * Fix for alpino, it is linked against extra libraries which are in a non-default location
 > * Continue even if shared data path can't be created (due to permission issues sometimes)
-> * Various fixes for improved jupyter lab integration 
+> * Various fixes for improved jupyter lab integration
 >     * auto-starting it
 >     * store jupyter notebooks in www_data_path and allow this to be stored on the shared data volume (relevant for docker/VM)
 > * Implemented new www_data_path option and a shared_www_data boolean that by defaults sets the data path to be on the shared volume (for VM/container)
@@ -345,7 +374,7 @@ https://github.com/proycon/labirinto/releases/tag/v0.2.5
 > * Added clam_include directive to include a base CLAM configuration from the configuration of each clam service
 > * adding various "maintainted by lamachine" comments to configuration files, warning the user not to edit them.
 > * Fixes and updated instructions for for LXD containers
-> * Fixes in lamachine-start-webserver and cleanup of lamachine-start-webserver output 
+> * Fixes in lamachine-start-webserver and cleanup of lamachine-start-webserver output
 
 
 *(Released by Maarten van Gompel on 2020-01-14)*
@@ -359,7 +388,7 @@ https://github.com/proycon/LaMachine/releases/tag/v2.14
 > * Allowing quicker updates with the lamachine-update --only parameter no longer process all dependencies if it is set
 > * Remove labirinto sources before update because it often fails to upgrade nicely
 > * Allow LaMachine to build against a custom Python 3, by setting python_bin and pip_bin (building the custom Python is not included in LaMachine) #159
-> * Fixes for Arch Linux #161 
+> * Fixes for Arch Linux #161
 > * adding hdf5 to base packages (required by keras)
 > * adding new translitteration service (t2t)
 > * Various smaller fixes
@@ -373,7 +402,7 @@ https://github.com/proycon/LaMachine/releases/tag/v2.12
 > Various fixes:
 > * lamachine-list: get $LM_PREFIX dynamically
 > * lamachine-list update
-> * metadata fixes for glem and g2pservice 
+> * metadata fixes for glem and g2pservice
 > * adding valkuil frontend installation and configuration  (not done)
 > * allow setting ignore_errors in package for lamachine-package-install, as it does not propagate to tasks within ignore_role
 > * disabling cask installation for homebrew, they say it comes by default
