added note on documentation

--- a/reports/2020-01-15-to-2020-06-02.md
+++ b/reports/2020-01-15-to-2020-06-02.md
@@ -7,8 +7,9 @@ End date:  2020-06-02
 
 This period ends with the retirement of Ko van Sloot. We worked on releasing the latests versions of his software (Frog,
 ucto, timbl, mbt, libfolia) and also built and submitted new debian packages for all of these, having reached a stable
-and mature state. Maintenance of Frog, Timbl, mbt, libfolia will be taken over by Maarten van Gompel, ensuring
-continuity, albeit with much reduced focus on further development of new features in these software packages.
+and mature state. A lot of documentation has been added to the code to ease future maintenane. Maintenance of Frog,
+Timbl, mbt, libfolia will be taken over by Maarten van Gompel, ensuring continuity, albeit with much reduced focus on
+further development of new features in these software packages.
 
 The TICCL-tools have been released as well, along with a new release of PICCL. As there is no maintainer for TICCL-tools
 after Ko's retirement, development and maintenance on this will most likely come to a stop until Martin Reynaert can
